# FlashCK

./: .gitignore  .gitmodules  BUILD_GUIDE.md  CMakeLists.txt  Dockerfile  KERNEL_MODULES_OPTIMIZATION.md  README.md  debug.sh  pyproject.toml  setup.py  test_builder_stats  test_builder_stats.cpp  test_constructor_debug.cpp
ater/core/graph/: CMakeLists.txt  common.h  context.cc  context.h  layer.cc  layer.h  node.cc  node.h  operation.cc  shape.cc  shape.h  tensor.cc  tensor.h  variable.cc
ater/core/profiler/: CMakeLists.txt  alignment.h  base.h  build_cache.cc  build_cache.h  build_cache_utils.h  builder.cc  builder.h  builder_utils.h  codegen.h  emitters.cc  emitters.h  gemm_cache_entry.h  gemm_gpu_profiler_runner.cc  gemm_gpu_profiler_runner.h  gemm_operation.cc  gemm_operation.h  generator.cc  generator.h  library.h  profile_cache.cc  profile_cache.h  profiler_runner_utils.h  target.cc  target.h
ater/core/utils/: CMakeLists.txt  dtype.h  enforce.cc  enforce.h  errors.cc  errors.h  file_utils.h  flags.cc  flags.h  jinjia2_utils.h  layout.h  log.cc  log.h  math_utils.h  memory_utils.cc  memory_utils.h  named_tuple_utils.h  printf.cc  printf.h  rocm_info.cc  rocm_info.h  source_type.h  string_utils.h  subprocess_utils.h  timer.h
core/: CMakeLists.txt
core/graph/: CMakeLists.txt  common.h  context.cc  context.h  layer.cc  layer.h  node.cc  node.h  operation.cc  shape.cc  shape.h  tensor.cc  tensor.h  variable.cc
core/memory/: CMakeLists.txt  allocator.cc  allocator.h  memory_manager.cc  memory_manager.h
core/module/: CMakeLists.txt
core/module/kernels/: CMakeLists.txt  kernel.h  kernel_factory.cc  kernel_factory.h  kernel_helper.h  kernel_registry.h
core/module/layers/: CMakeLists.txt
core/module/operations/: CMakeLists.txt
core/profiling/: CMakeLists.txt  builder.cc  builder.h  builder_utils.h  compiler.cc  compiler.h  gpu_profiling_runner.cc  gpu_profiling_runner.h  gpu_profiling_runner_utils.h  graph_codegen.cc  graph_codegen.h  problem_base.h  profiling_db.cc  profiling_db.h  profiling_engine.cc  profiling_engine.h  profiling_helper.h
core/profiling/attention/: fmha_library.h  fmha_problem.h
core/profiling/fmha/: fmha_library.h  fmha_problem.h
core/profiling/gemm/: gemm_backup_config.h  gemm_codegen.cc  gemm_codegen.h  gemm_emitter.cc  gemm_emitter.h  gemm_library.h  gemm_problem.h
core/profiling/moe/: moe_library.h  moe_problem.h
core/profiling/norm/: norm_emitter.cc  norm_library.h  norm_problem.h
core/pybind/: CMakeLists.txt  pybind.cc  pybind_helper.h
core/pybind/norm/: layer_norm.h
core/utils/: CMakeLists.txt  common.h  debug_utils.cc  debug_utils.h  enforce.cc  enforce.h  file_manager.cc  flags.cc  flags.h  hip_utils.cc  hip_utils.h  init.cc  init.h  json_config.h  macros.cc  macros.h  memory_utils.cc  memory_utils.h  printf.cc  string_utils.cc  string_utils.h  subprocess_utils.cc
examples/: CMakeLists.txt
examples/cpp/: CMakeLists.txt
examples/cpp/bert/: CMakeLists.txt  bert_config.ini  bert_example.cc
examples/cpp/norm/: CMakeLists.txt  example_layer_norm.cc  example_rms_norm.cc
examples/pytorch/bert/: check_bert_weight.py  huggingface_bert_convert.py
flashck/: CMakeLists.txt  __init__.py  utils.py
flashck/core/: CMakeLists.txt
flashck/core/graph/: CMakeLists.txt  common.h  context.cc  context.h  layer.cc  layer.h  node.cc  node.h  operation.cc  shape.cc  shape.h  shape_utils.h  tensor.cc  tensor.h  variable.cc
flashck/core/memory/: CMakeLists.txt  allocator.cc  allocator.h  memory_manager.cc  memory_manager.h
flashck/core/module/: CMakeLists.txt  README.md
flashck/core/profiler/: CMakeLists.txt  README.md  base.h  build_cache.cc  build_cache.h  build_cache_utils.h  builder.cc  builder.h  builder_utils.h  codegen.h  emitters.cc  emitters.h  generator.cc  generator.h  gpu_profiler_runner.cc  gpu_profiler_runner.h  gpu_profiler_runner_utils.h  profile_cache.cc  profile_cache.h  profiler_engine.cc  profiler_engine.h  using_utils.h
flashck/core/profiling/: CMakeLists.txt  README.md  builder.cc  builder.h  builder_utils.h  codegen.h  codegen_common.h  codegen_utils.h  compiler.cc  compiler.h  gpu_profiling_runner.cc  gpu_profiling_runner.h  gpu_profiling_runner_utils.h  graph_codegen.cc  graph_codegen.h  library.h  problem_base.h  profiling_db.cc  profiling_db.h  profiling_engine.cc  profiling_engine.h  profiling_helper.h  profiling_strategy.h
flashck/core/utils/: CMakeLists.txt  common.h  debug_utils.cc  debug_utils.h  dtype.cc  dtype.h  dylib_utils.cc  dylib_utils.h  enforce.cc  enforce.h  errors.cc  errors.h  file_manager.cc  file_manager.h  file_utils.cc  file_utils.h  flags.cc  flags.h  hip_raii.h  hip_utils.cc  hip_utils.h  init.cc  init.h  macros.cc  macros.h  memory_utils.cc  memory_utils.h  printf.cc  printf.h  string_utils.cc  string_utils.h  subprocess_utils.cc  subprocess_utils.h  timer.cc  timer.h
flashck/nn/norm/: layer_norm.py
flashck/ops/: __init__.py
flashck/ops/norm/: __init__.py  layer_norm.py
flashck/wrapper/: CMakeLists.txt
flashck/wrapper/cpp/: CMakeLists.txt  flashck_cpp_wrapper.pc.in  flashck_wrapper.h
flashck/wrapper/pytorch/: __init__.py  utils.py
include/flashck/: CMakeLists.txt  layer_norm.h
include/flashck/norm/: rms_norm.h
lightinfer/core/graph/: CMakeLists.txt  common.h  context.cc  context.h  layer.cc  layer.h  node.cc  node.h  operation.cc  shape.cc  shape.h  (+4 more)
tests/: CMakeLists.txt  test_backup_config.cpp  test_json_config.cpp
tests/attention/: CMakeLists.txt  test_bias_utils.h  test_fmha_configs.h  test_fuse_multi_head_attention.cc  test_mask_utils.h  test_memory_efficient_attention.cc  test_memory_efficient_attention_decoder.cc  test_rotary_utils.h  test_tensor_utils.h  test_varlen_utils.h
tests/cpp/: CMakeLists.txt  README.md  TEST_FRAMEWORK_GUIDE.md  benchmark_layer_norm.cpp  test_layer_norm.cpp  test_layer_norm_dynamic.cpp  test_operation_template.cpp
tests/embedding/: CMakeLists.txt  test_embedding.cc  test_embedding_add_add_layer_norm.cc
tests/norm/: CMakeLists.txt  test_layer_norm.cc
tests/utils/: benchmark_utils.h  gtest_utils.h  torch_utils.h
(+881 files in other folders)
