# ==============================================================================
# FlashCK Core Components
# ==============================================================================

# Add core subdirectories
add_subdirectory(utils)
add_subdirectory(memory)
add_subdirectory(graph)
add_subdirectory(profiling)
# add_subdirectory(module)

# if(BUILD_PYTHON_BINDINGS)
#     add_subdirectory(pybind)
# endif()
