# ==============================================================================
# FlashCK Module Components
# ==============================================================================

# Add module subdirectories in dependency order
add_subdirectory(kernels)
add_subdirectory(operations)
add_subdirectory(layers)
